add_library(debug_break INTERFACE debug_break.h)

add_library(print_utility print_utility.h print_utility.c)

add_library(list_addressorder_utilities list_addressorder_utilities.h list_addressorder_utilities.c)

add_library(list_bestfit_utilities list_bestfit_utilities.h list_bestfit_utilities.c)

add_library(list_segregated_utilities list_segregated_utilities.h list_segregated_utilities.c)

add_library(rbtree_clrs_utilities rbtree_clrs_utilities.h rbtree_clrs_utilities.c)

add_library(rbtree_unified_utilities rbtree_unified_utilities.h rbtree_unified_utilities.c)

add_library(rbtree_linked_utilities rbtree_linked_utilities.h rbtree_linked_utilities.c)

add_library(rbtree_stack_utilities rbtree_stack_utilities.h rbtree_stack_utilities.c)

add_library(rbtree_topdown_utilities rbtree_topdown_utilities.h rbtree_topdown_utilities.c)

